--- a/00_home/style.css
+++ b/00_home/style.css
@@ -28,8 +28,8 @@ header {
     height: 242px; 
     width: 100%; 
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Agora temos 4 colunas */
-    grid-template-rows: repeat(4, 1fr);    /* Agora temos 3 linhas */
+    grid-template-columns: repeat(4, 1fr); 
+    grid-template-rows: repeat(4, 1fr);    
     text-align: center;
 }
 
@@ -45,9 +45,7 @@ header {
 header .logo {
     grid-column: 2 / 4;
     grid-row:  2;
-
-    margin-top: 28px;
-    
+    margin-top: 28px;    
 }
 
 
@@ -57,7 +55,6 @@ header .logo {
 .navegador {
     grid-column: 2 / 4;
     grid-row: 5;
-  
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,8 +64,8 @@ header .logo {
 
 .navegador ul {
    border-radius: 5px;
-   display: flex; /* ----- coloca os itens em linha */
-   gap: 10px; /* ---------- espaço entre os itens */
+   display: flex; 
+   gap: 10px; 
    list-style: none;
 }
 
@@ -82,7 +79,7 @@ header .logo {
     color: white; /*--------- para manter a fonte no hover, branca*/
     border-radius: 5px;
 
-    transition: all 0.2s ease;  /* <-- coloca aqui */
+    transition: all 0.2s ease;  
     
 }
 
@@ -106,7 +103,7 @@ header .logo {
     background: rgb(48, 187, 250);
     color: #090909;
     cursor: pointer;
-    box-shadow: 0px 0px 25px rgba(119, 236, 234, 0.897); /* sombra pra baixo */
+    box-shadow: 0px 0px 25px rgba(119, 236, 234, 0.897); /* sombreado azu de fundo */
     transform: scale(1.05);  /* dá uma leve aumentada no tamanho (5%) ao interagir, tipo efeito "zoom-in" */
     transition: all 0.2s ease;  /* suaviza a transição da transformação, deixando o efeito mais fluido */
     
@@ -128,8 +125,8 @@ header .logo {
 
 .contato nav ul li {
     width: 70px;     
-    height: 45px; /* diminui o espaçamento */
-    list-style-type: none; /*----- tirar aquelas bolinhas do LI */
+    height: 45px; /* -------------------- diminui o espaçamento */
+    list-style-type: none; /*------------ tirar aquelas bolinhas do LI */
     
 }
 
@@ -156,14 +153,6 @@ header .logo {
     font-weight: 400;
     gap: -10px;
 }
-
-
-
-
-
-
-
-
 
 
 
@@ -284,9 +273,6 @@ header .logo {
 
 
 
-
-
-
 .caixa-enunciado {
     display: flex;
     justify-content: center;
@@ -326,7 +312,7 @@ header .logo {
 
 footer {
     font-family: "Archivo Black", sans-serif;
-    font-weight: 400;  /* define a espessura da fonte */
+    font-weight: 400;  /* ---------------------define a espessura da fonte */
     font-style: normal;
     background: black;
     max-width: 100%;
@@ -348,7 +334,7 @@ footer img{
 
 ._1_lista{
     position: relative;  /* deixa ele solto em relaçao aos outros */
-    right: 80px; /* ou qualquer valor que você queira */
+    right: 80px; 
     
 }
 
