--- a/01_estoque/style.css
+++ b/01_estoque/style.css
@@ -28,8 +28,8 @@ header {
     height: 242px; 
     width: 100%; 
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Agora temos 4 colunas */
-    grid-template-rows: repeat(4, 1fr);    /* Agora temos 3 linhas */
+    grid-template-columns: repeat(4, 1fr); 
+    grid-template-rows: repeat(4, 1fr);    
     text-align: center;
 }
 
@@ -67,8 +67,8 @@ header .logo {
 
 .navegador ul {
    border-radius: 5px;
-   display: flex; /* ----- coloca os itens em linha */
-   gap: 10px; /* ---------- espaço entre os itens */
+   display: flex; 
+   gap: 10px; 
    list-style: none;
 }
 
@@ -82,7 +82,7 @@ header .logo {
     color: white; /*--------- para manter a fonte no hover, branca*/
     border-radius: 5px;
 
-    transition: all 0.2s ease;  /* <-- coloca aqui */
+    transition: all 0.2s ease;  
     
 }
 
@@ -90,11 +90,8 @@ header .logo {
 .navegador ul li a{
     text-decoration: none;     
     color: inherit;            /* herda a cor do li */
-    
     font-family: 'CopperplateGothicBold', serif;
-   
     font-size: 16px;
-
 }
 
 
@@ -225,7 +222,7 @@ header .logo {
     margin-right: 20px;
     width: 100%;
     font-style: italic;
-    color: #000000d2;
+    color: #000000;
 }
 
 .card button {
@@ -236,9 +233,10 @@ header .logo {
     display: flex;
     align-items: center;
     justify-content: center;
-
+    
     width: 115%;
     height: 20%;
+    
     padding: 3px;
     border: none;
     background: black;
@@ -251,7 +249,7 @@ header .logo {
 
 .card button:hover {
     background: #26ed07;
-    color: var(--blue);
+    color: black;
 }
 
 .grupo_cards .card .arrow {
@@ -264,11 +262,14 @@ header .logo {
     cursor: pointer;
     padding: 20px 10px; 
     font-size: 10px; 
+    
     width: 10px; 
     height: 1px; 
+    
     opacity: 0.5; 
     transition: opacity 0.1s, background-color 0.1s; 
     z-index: 1; 
+    
     display: flex; 
     align-items: center;
     justify-content: center;
@@ -299,9 +300,11 @@ footer {
     font-style: normal;
     background: black;
     max-width: 100%;
+    
     display: grid;
     grid-template-columns: repeat(5, auto); 
     grid-template-rows: auto auto;
+    
     justify-content: center;
     align-items: center;
     gap: 40px;
@@ -316,8 +319,8 @@ footer img{
 
 
 ._1_lista{
-    position: relative;  /* deixa ele solto em relaçao aos outros */
-    right: 80px; /* ou qualquer valor que você queira */
+    position: relative;  
+    right: 80px; 
     
 }
 
