--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ header .logo {
     padding: 3px 8px;
     font-size: 16px;
     
-    box-shadow: 0px 0px 8px rgba(119, 236, 234, 1); 
+    box-shadow: 0px 0px 8px rgba(119, 236, 234, 0.897); 
     color: white; /*--------- para manter a fonte no hover, branca*/
     border-radius: 5px;
 
@@ -102,7 +102,7 @@ header .logo {
 .navegador li:hover {
     background: rgb(48, 187, 250);
     color: #000000;
-/*     cursor: pointer; */
+    cursor: pointer;
     box-shadow: 0px 0px 25px rgba(119, 236, 234, 0.897); /* sombreado azu de fundo */
     transform: scale(1.05);  /* dá uma leve aumentada no tamanho (5%) ao interagir, tipo efeito "zoom-in" */
     transition: all 0.2s ease;  /* suaviza a transição da transformação, deixando o efeito mais fluido */
